--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
 </head>
   <body class="antialiased selection:bg-cyan-500/30 selection:text-cyan-800 dark:selection:text-cyan-200 transition-colors duration-300">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
